<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageDetailedFillable"
            android:layout_width="wrap_content"
            android:layout_height="230sp" />

        <TextView
            android:id="@+id/nameDetailedFillable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/synopsysLiteral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6sp"
            android:layout_marginTop="10sp"
            android:paddingLeft="170sp"
            android:text="@string/literal_overview"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/synopsisFillable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6sp"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/genresDetailedLiteral2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6sp"
            android:text="@string/literal_genres"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/genresDetailedFillable2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6sp"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scoreDetailedLiteral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6sp"
                android:text="@string/literal_score"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/scoreDetailedFillable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6sp"
                android:layout_weight="1"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/releaseDateDetailedLiteral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6sp"
                android:layout_marginTop="10sp"
                android:text="@string/literal_release_date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/releaseDateDetailedFillable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6sp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/favouriteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favourite_button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>